versions/v2.9/modules/en/pages/cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc
= Setting Up an Out-of-tree VMware vSphere Cloud Provider
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc 
:product-path: cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc
:experimental:

Kubernetes is moving away from maintaining cloud providers in-tree. VMware vSphere has an out-of-tree cloud provider that can be used by installing the vSphere cloud provider and cloud storage plugins.

This page covers how to install the Cloud Provider Interface (CPI) and Cloud Storage Interface (CSI) plugins after setting up a cluster.

== Prerequisites

The vSphere versions supported:

* 6.7u3
* 7.0u1 or higher.

The Kubernetes version must be 1.19 or higher.

Using the vSphere out-of-tree cloud provider requires Linux nodes and is not supported on Windows.

== Installation

The Cloud Provider Interface (CPI) should be installed first before installing the Cloud Storage Interface (CSI).

=== 1. Create a VMware vSphere cluster

. Click *☰ > Cluster Management*.
. On the *Clusters* page, click *Create*.
. Click *VMware vSphere* or *Custom*.
. On the *Basics* tab in the *Cluster Configuration* section, set the *Cloud Provider* to *vSphere*.
. In the *Add-On Config* tab, the vSphere Cloud Provider (CPI) and Storage Provider (CSI) options.
. Finish creating your cluster.

=== 2. Install the CPI plugin

. Click *☰ > Cluster Management*.
. Go to the cluster where the vSphere CPI plugin will be installed and click *Explore*.
. Click menu:Apps[Charts].
. Click *vSphere CPI*.
. Fill out the required vCenter details.
. vSphere CPI initializes all nodes with ProviderID which is needed by the vSphere CSI driver. Check if all nodes are initialized with the ProviderID before installing CSI driver with the following command:
+
----
 kubectl describe nodes | grep "ProviderID"
----

=== 3. Installing the CSI plugin

. Click *☰ > Cluster Management*.
. Go to the cluster where the vSphere CSI plugin will be installed and click *Explore*.
. Click menu:Apps[Charts].
. Click *vSphere CSI*.
. Click *Install*.
. Fill out the required vCenter details. On the *Features* tab, set *Enable CSI Migration* to *false*.
. On the *Storage* tab, fill out the details for the StorageClass. This chart creates a StorageClass with the `csi.vsphere.vmware.com` as the provisioner.
. Click *Install*.

== Using the CSI driver for provisioning volumes

The CSI chart by default creates a storageClass.

If that option was not selected while launching the chart, create a storageClass with the `csi.vsphere.vmware.com` as the provisioner.

All volumes provisioned using this StorageClass will get provisioned by the CSI driver.
